--- a/incl/main/simplex_metoden/simplex_metoden_intro.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_intro.tex
@@ -84,8 +84,8 @@ Med udgangspunkt i et generelt lineært optimeringsproblem på formen
 \end{align*}
 er simplextabellen en matrix, som indeholder de lineære betingelser, slack-variablerne og objektfunktionen. 
 Matricen $\mathbf{A}$ opskrives først, og derefter opskrives identitesmatricen $e_{m+1}$, hvor $m$ er antallet af slack-variabler, samt den optimale løsning $z$, og til sidst opskrives $\mathbf{b}$. 
-Identitetsmatricen $I_m$, som udgør antallet af slack-variabler danner basismatricen $B$.
 Under $\mathbf{A}$ tilføjes objektfunktionen $- \mathbf{c}^T$. 
+Identitetsmatricen $I_m$, som dannes med udgangspunkt i antallet af slack-variabler danner basismatricen $B$.
 Med udgangspunkt i forrige optimeringsproblem ser en generel formel i simplex-tabellen dermed ud som følgende:
 %
 \begin{align*}
