--- a/CSB/incl/main/14.tex
+++ b/CSB/incl/main/14.tex
@@ -1,2 +1,14 @@
 \section*{4.}
 % 
+\section*{(a) }
+
+\section*{(b) Python script - Sekantmetoden}
+%Skriv et Python script der implementerer sekantmetoden. Det kan gøres ved at modicere scriptet beregnet til Newtons metode. Sammenlig sekantmetoden med Newtons metode.
+
+Forskellen mellem Sekantmetoden og Newtons metode er at fiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiisk 
+
+\section*{(c) Fixpunktligningen}
+% Ligningen (6) kan omskrives til en xpunktligning. Gr rede for de to omskrivninger her
+
+
+\section*{(d) }
