--- a/CSB/incl/main/13.tex
+++ b/CSB/incl/main/13.tex
@@ -20,7 +20,7 @@ På figur \ref{fig:bis} ses de første $3$ midtpunkter og funktionen $f(x)$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \begin{center}
-\begin{tikzpicture}[scale=10]
+\begin{tikzpicture}[scale=12]
 %
 % Koordinater 
 % ------------------------------------------------------
@@ -57,7 +57,7 @@ På figur \ref{fig:bis} ses de første $3$ midtpunkter og funktionen $f(x)$.
 % Koordinatsystemet 
 % -------------------------------------------------------
 \draw[thick,->] (-0.1,0.25) -- (0.8,0.25) node[anchor=south east]{$x$};
-\draw[thick,->] (0,0) -- (0,0.6) node[anchor=north west]{$y$};
+\draw[thick,->] (0,0.1) -- (0,0.6) node[anchor=north west]{$y$};
 %
 \end{tikzpicture}
   \captionof{figure}{Illustration af bisektionsmetoden, hvor $m_1=\frac{a+b}{2}$, $m_2=\frac{m_1+b}{2}$, $m_3=\frac{m_1+m_2}{2}$.}
@@ -82,7 +82,7 @@ På figur \ref{fig:iter} ses dette gjort for en fixpunkt-ligning $g(x)$, hvor de
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \begin{center}
-\begin{tikzpicture}[scale=10]
+\begin{tikzpicture}[scale=12]
 %
 % Koordinater 
 % ------------------------------------------------------
@@ -183,7 +183,7 @@ På figur \ref{fig:iter} ses dette gjort for en fixpunkt-ligning $g(x)$, hvor de
 \draw[thick,->] (0,-0.1) -- (0,0.65) node[anchor=north west]{$y$};
 %
 \end{tikzpicture}
-  \captionof{figure}{Cobweb diagram for fixpunkt-ligningen $g(x)=x$, markeret med blå, og $y=x$ markeret med rød, hvor de første $5$ $x$ er markeret.}
+  \captionof{figure}{Cobweb diagram for fixpunkt-ligningen $g(x)=x$, markeret med blå, og $y=x$ markeret med rød, hvor de første fem $x$-værdier er markeret.}
   \label{fig:iter}
 \end{center}
 
@@ -204,14 +204,10 @@ x_{n+1}=x_n- \frac{f(x_n)}{f'(x_n)},
 \end{align*} 
 der beregnes for de efterfølgende $x$-værdier indtil nulpunktet er fundet.  
 % måske noget om taylors formel xD
-På figur \ref{fig:new} ses de første $3$ $x$-værdier og tilhørende første ordens taylorudvikling. 
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Flot graf alla Julie     %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+På figur \ref{fig:new} ses de første tre $x$-værdier og tilhørende første ordens taylorudvikling. 
 %
 \begin{center}
-\begin{tikzpicture}[scale=10]
+\begin{tikzpicture}[scale=12]
 %
 % Koordinater 
 % ------------------------------------------------------
@@ -220,10 +216,10 @@ På figur \ref{fig:new} ses de første $3$ $x$-værdier og tilhørende første o
 \coordinate (c) at (0.6,0.48);		% 1
 \coordinate (d) at (0.33,-0.05);	% a
 \coordinate (e) at (0.66,0.59); 	% b
-\coordinate (f) at (0.355,0.115);	% 2
-\coordinate (g) at (0.48,0.25);		% a
-\coordinate (h) at (0.21,-0.05);	% b
-\coordinate (i) at (0.254,0.022);	% 3
+\coordinate (f) at (0.408,0.173);	% 2
+\coordinate (g) at (0.47,0.252);	% a
+\coordinate (h) at (0.238,-0.05);	% b
+\coordinate (i) at (0.353,0.11);	% 3
 \coordinate (j) at (0.32,0.07);		% a
 \coordinate (k) at (0.16,-0.05);	% b
 \coordinate (l) at (0.299,0.423);
@@ -233,9 +229,8 @@ På figur \ref{fig:new} ses de første $3$ $x$-værdier og tilhørende første o
 % -------------------------------------------------------
   \draw[very thick, color=AAUblue2](a) parabola (b);
    
-  \draw[thick, color = AAUgreen](d) -- (e); 
-  \draw[thick, color = AAUgreen](g) -- (h); 
-  \draw[thick, color = AAUgreen](j) -- (k);   
+  \draw[densely dashed, thick, color = AAUgreen](d) -- (e); 
+  \draw[densely dashed, thick, color = AAUgreen](g) -- (h);   
 %
 % Punkter
 % -------------------------------------------------------
@@ -243,134 +238,11 @@ På figur \ref{fig:new} ses de første $3$ $x$-værdier og tilhørende første o
   \node at (0.6,0.6) (){$f(x)$};
   
   \node at (0.6,-0.05) (){$x_1$};
-  \draw[densely dotted](0.6,0) -- (c);
+  \draw[densely dotted](0.6,0.1) -- (c);
   \node at (0.355,-0.05) (){$x_2$}; 
-  \draw[densely dotted](0.355,0) -- (f);
+  \draw[densely dotted](0.408,0.1) -- (f);
   \node at (0.254,-0.05) (){$x_3$}; 
-  \draw[densely dotted](0.254,0) -- (i);
-%
-%
-% Koordinatsystemet 
-% -------------------------------------------------------
-\draw[thick,->] (-0.1,0) -- (0.8,0) node[anchor=south east]{$x$};
-\draw[thick,->] (0,-0.1) -- (0,0.65) node[anchor=north west]{$y$};
-%
-\end{tikzpicture}
-  \captionof{figure}{Illustration af newtons metode.}
-  \label{fig:new}
-\end{center}
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection*{Sekantmetodenn}
-\textbf{Sekantmetoden} kan bruges hvis man ikke kender $f'(x)$ eller i tilfælde af at $f'(x)=0$. 
-To vilkårlig punkter $x_0$ og $x_1$ vælges, hvor $x_0x_1<0$, og \textbf{sekantmetodens iterationsformel}
-\begin{align*}
-x_{n+1}=x_n- \frac{x_n-x_{n-1}}{f(x_n)-f(x_{n-1})}f(x_n) ,
-\end{align*}
-beregnes for de efterfølgende $x$-værdier indtil nulpunktet er fundet. 
-På figur \ref{fig:sek} ses de første xxxxxxx.
-
-
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Flot graf alla Julie     %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-\begin{center}
-\begin{tikzpicture}[scale=10]
-%
-% Koordinater 
-% ------------------------------------------------------
-\coordinate (a) at (0.1,0.5);
-\coordinate (b) at (0.4,0.3);
-\coordinate (c) at (0.7,0.1);
-%
-%        
-% Streger 
-% -------------------------------------------------------
-  \draw[densely dotted](0.1,0.25) -- (a);
-  \draw[densely dotted](0.4,0.25) -- (b);
-  \draw[densely dotted](0.7,0.25) -- (c);
-  \draw[densely dotted](0.55,0.23) -- (0.55,0.15);
-  \draw[densely dotted](0.475,0.23) -- (0.475,0.21);
-  \draw[very thick, color=AAUblue2](a) parabola (b);
-  \draw[very thick, color=AAUblue2](b) parabola[bend at end] (c);
-  \draw[thick](0.1,0.23) -- (0.1,0.27); % (a)
-  \draw[thick](0.7,0.23) -- (0.7,0.27); % (b)
-  \draw[thick](0.4,0.23) -- (0.4,0.27); % (m_1)
-  \draw[thick](0.55,0.23) -- (0.55,0.27); % (m_2)
-  \draw[thick](0.475,0.23) -- (0.475,0.27); % (m_3)
-%
-%
-% Punkt 
-% -------------------------------------------------------
-\node at (0.1,0.2) (){$a$};
-\node at (0.7,0.3) (){$b$};
-\node at (0.4,0.2) (){$m_1$};
-\node at (0.55,0.3) (){$m_2$};
-\node at (0.475,0.3) (){$m_3$};
-% 
-%
-% Koordinatsystemet 
-% -------------------------------------------------------
-\draw[thick,->] (-0.1,0.25) -- (0.8,0.25) node[anchor=south east]{$x$};
-\draw[thick,->] (0,0) -- (0,0.6) node[anchor=north west]{$y$};
-%
-\end{tikzpicture}
-  \captionof{figure}{Illustration af sekantmetoden.}
-  \label{fig:sek}
-\end{center}
-%
-
-
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Flot graf alla Julie     %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-\begin{center}
-\begin{tikzpicture}[scale=10]
-%
-% Koordinater 
-% ------------------------------------------------------
-\coordinate (a) at (0.05,-0.05);
-\coordinate (b) at (0.65,0.58);
-\coordinate (c) at (0.6,0.48);		% 1
-\coordinate (d) at (0.07,-0.07);	% a
-\coordinate (e) at (0.66,0.59); 	% b
-\coordinate (f) at (0.355,0.115);	% 2
-\coordinate (g) at (0.48,0.25);		% a
-\coordinate (h) at (0.21,-0.05);	% b
-\coordinate (i) at (0.254,0.022);	% 3
-\coordinate (j) at (0.32,0.07);		% a
-\coordinate (k) at (0.16,-0.05);	% b
-\coordinate (l) at (0.299,0.423);
-%
-%        
-% Streger 
-% -------------------------------------------------------
-  \draw[very thick, color=AAUblue1](a) parabola (b);
-   
-  \draw[thick, color = AAUgreen](d) -- (e); 
-  \draw[thick, color = AAUred](g) -- (h); 
-  \draw[thick, color = AAUblue2](j) -- (k);   
-%
-% Punkter
-% -------------------------------------------------------
-%
-  \node at (0.6,0.6) (){$f(x)$};
-  
-  \node at (0.6,-0.05) (){$x_1$};
-  \draw[densely dotted](0.6,0) -- (c);
-  \node at (0.355,-0.05) (){$x_2$}; 
-  \draw[densely dotted](0.355,0) -- (f);
-  \node at (0.254,-0.05) (){$x_3$}; 
-  \draw[densely dotted](0.254,0) -- (i);
+  \draw[densely dotted](0.353,0.1) -- (i);
 %
 %
 % Koordinatsystemet 
@@ -379,7 +251,136 @@ På figur \ref{fig:sek} ses de første xxxxxxx.
 \draw[thick,->] (0,-0.1) -- (0,0.65) node[anchor=north west]{$y$};
 %
 \end{tikzpicture}
-  \captionof{figure}{Illustration af sekantmetoden.}
+  \captionof{figure}{Illustration af newtons metode, hvor de første tre $x$-værdier er markeret.}
+  \label{fig:new}
+\end{center}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection*{Sekantmetoden}
+\textbf{Sekantmetoden} kan bruges hvis man ikke kender $f'(x)$ eller i tilfælde af at $f'(x)=0$. 
+To vilkårlig punkter $x_0$ og $x_1$ vælges, hvor $x_0x_1<0$, og \textbf{sekantmetodens iterationsformel}
+\begin{align*}
+x_{n+1}=x_n- \frac{x_n-x_{n-1}}{f(x_n)-f(x_{n-1})}f(x_n) ,
+\end{align*}
+beregnes for de efterfølgende $x$-værdier indtil nulpunktet er fundet. 
+På figur \ref{fig:sek} ses de første fem $x$-værdier markeret og tilhørende sekanthældning.
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% Flot graf alla Julie     %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+\begin{center}
+\begin{tikzpicture}[scale=12]
+%
+% Koordinater 
+% ------------------------------------------------------
+\coordinate (a) at (0.05,-0.05);
+\coordinate (b) at (0.65,0.58);
+\coordinate (c) at (0.6,0.48);		% x_0
+\coordinate (d) at (0.07,-0.07);	% a
+\coordinate (e) at (0.66,0.54); 	% b
+\coordinate (f) at (0.092,-0.05);	% x_1
+\coordinate (g) at (0.236,0.01);	% x_2
+\coordinate (h) at (0.05,-0.065);	% a
+\coordinate (i) at (0.5,0.12);		% b
+\coordinate (j) at (0.45,0.228);	% x_3
+\coordinate (k) at (0.47,0.25);		% a
+\coordinate (l) at (0.218,-0.005);  % b
+\coordinate (m) at (0.323,0.083);   % x_4
+\coordinate (n) at (0.47,0.25);		% a
+\coordinate (o) at (0.31,0.065);  % b
+\coordinate (p) at (0.323,0.083);   % x_5
+%
+%        
+% Streger 
+% -------------------------------------------------------
+  \draw[very thick, color=AAUblue2](a) parabola (b);
+   
+  \draw[densely dashed, thick, color = AAUgreen](d) -- (e); 
+  \draw[densely dashed, thick, color = AAUgreen](h) -- (i); 
+  \draw[densely dashed, thick, color = AAUgreen](k) -- (l);
+  \draw[densely dashed, thick, color = AAUgreen](n) -- (o);   
+%
+% Punkter
+% -------------------------------------------------------
+%
+  \node at (0.6,0.6) (){$f(x)$};
+  
+  \node at (0.6,0.08) (){$x_0$};
+  \draw[densely dotted](0.6,0.1) -- (c);
+  \node at (0.092,0.12) (){$x_1$}; 
+  \draw[densely dotted](0.092,0.1) -- (f);
+  \node at (0.236,0.12) (){$x_2$}; 
+  \draw[densely dotted](0.236,0.1) -- (g);
+  \node at (0.45,0.08) (){$x_3$}; 
+  \draw[densely dotted](0.45,0.1) -- (j);
+  \node at (0.323,0.12) (){$x_4$}; 
+  \draw[densely dotted](0.323,0.1) -- (m);
+%
+%
+% Koordinatsystemet 
+% -------------------------------------------------------
+\draw[thick,->] (-0.1,0.1) -- (0.8,0.1) node[anchor=south east]{$x$};
+\draw[thick,->] (0,-0.1) -- (0,0.65) node[anchor=north west]{$y$};
+%
+\end{tikzpicture}
+  \captionof{figure}{Illustration af sekantmetoden, hvor de første fem $x$-værdier er markeret.}
   \label{fig:sek}
 \end{center}
 
+
+% EKSTRA  
+%%
+%\begin{center}
+%\begin{tikzpicture}[scale=12]
+%%
+%% Koordinater 
+%% ------------------------------------------------------
+%\coordinate (a) at (0.05,-0.05);
+%\coordinate (b) at (0.65,0.58);
+%\coordinate (c) at (0.6,0.48);		% 1
+%\coordinate (d) at (0.33,-0.05);	% a
+%\coordinate (e) at (0.66,0.59); 	% b
+%\coordinate (f) at (0.355,0.115);	% 2
+%\coordinate (g) at (0.48,0.25);		% a
+%\coordinate (h) at (0.21,-0.05);	% b
+%\coordinate (i) at (0.254,0.022);	% 3
+%\coordinate (j) at (0.32,0.07);		% a
+%\coordinate (k) at (0.16,-0.05);	% b
+%\coordinate (l) at (0.299,0.423);
+%%
+%%        
+%% Streger 
+%% -------------------------------------------------------
+%  \draw[very thick, color=AAUblue2](a) parabola (b);
+%   
+%  \draw[thick, color = AAUgreen](d) -- (e); 
+%  \draw[thick, color = AAUgreen](g) -- (h); 
+%  \draw[thick, color = AAUgreen](j) -- (k);   
+%%
+%% Punkter
+%% -------------------------------------------------------
+%%
+%  \node at (0.6,0.6) (){$f(x)$};
+%  
+%  \node at (0.6,-0.05) (){$x_1$};
+%  \draw[densely dotted](0.6,0) -- (c);
+%  \node at (0.355,-0.05) (){$x_2$}; 
+%  \draw[densely dotted](0.355,0) -- (f);
+%  \node at (0.254,-0.05) (){$x_3$}; 
+%  \draw[densely dotted](0.254,0) -- (i);
+%%
+%%
+%% Koordinatsystemet 
+%% -------------------------------------------------------
+%\draw[thick,->] (-0.1,0) -- (0.8,0) node[anchor=south east]{$x$};
+%\draw[thick,->] (0,-0.1) -- (0,0.65) node[anchor=north west]{$y$};
+%%
+%\end{tikzpicture}
+%  \captionof{figure}{Illustration af newtons metode.}
+%  \label{fig:new}
+%\end{center}
