--- a/CSB/incl/main/12.tex
+++ b/CSB/incl/main/12.tex
@@ -1,2 +1,15 @@
 \section*{2.}
-% 
+%
+\begin{align}
+f(\frac{L}{2})	&= h_0 + \lambda cosh (\frac{L}{2 \lambda}) = h\\
+f(0)			&= h_0 + \lambda = h-s
+\end{align}
+%
+Disse $2$ ligninger kan give anledning til en ny ligning.
+%
+\begin{align}
+h_0 + \lambda \cosh (\frac{L}{2 \lambda}) -(h_0 + \lambda \cosh (\frac{L}{2 \lambda})) &= h_0 + \lambda -(h_0 + \lambda)\\
+h_0 + \lambda \cosh (\frac{L}{2 \lambda}) - h &= h_0 + \lambda - (h - s)\\
+\lambda \cosh (\frac{L}{2 \lambda}) - h &= \lambda - h + s\\
+\lambda \cosh (\frac{L}{2 \lambda}) &= \lambda + s
+\end{align}
