Update sekant.py, 14.tex, and 3 more files...

--- a/CSB/incl/main/14.tex
+++ b/CSB/incl/main/14.tex
@@ -1,14 +1,6 @@
 \section*{4.}
 % 
-\section*{(a) }
-
-\section*{(b) Python script - Sekantmetoden}
-%Skriv et Python script der implementerer sekantmetoden. Det kan gøres ved at modicere scriptet beregnet til Newtons metode. Sammenlig sekantmetoden med Newtons metode.
-
-Forskellen mellem Sekantmetoden og Newtons metode er at fiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiisk 
-
-\section*{(c) Fixpunktligningen}
-% Ligningen (6) kan omskrives til en xpunktligning. Gr rede for de to omskrivninger her
-
-
-\section*{(d) }
+\input{incl/main/14a}
+\input{incl/main/14b}
+\input{incl/main/14c}
+\input{incl/main/14d}
