Update sekant.py, 14a.tex, and 3 more files...

--- a/CSB/incl/main/14b.tex
+++ b/CSB/incl/main/14b.tex
@@ -1,4 +1,4 @@
-\section*{(b) Python script - Sekantmetoden}
+\subsection*{(b) Python script - Sekantmetoden}
 %Skriv et Python script der implementerer sekantmetoden. Det kan gøres ved at modicere scriptet beregnet til Newtons metode. Sammenlig sekantmetoden med Newtons metode.
 
 Forskellen mellem Sekantmetoden og Newtons metode er at fiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiisk 
