--- a/CSB/incl/main/14c.tex
+++ b/CSB/incl/main/14c.tex
@@ -1,2 +1,2 @@
-\section*{(c) Fixpunktligningen}
+\subsection*{(c) Fixpunktligningen}
 % Ligningen (6) kan omskrives til en xpunktligning. Gr rede for de to omskrivninger her
