--- a/CSB/incl/main/14b.tex
+++ b/CSB/incl/main/14b.tex
@@ -1,4 +1,8 @@
-\subsection*{(b) Python script - Sekantmetoden}
+\subsection*{(b) Sekantmetoden}
 %Skriv et Python script der implementerer sekantmetoden. Det kan gøres ved at modicere scriptet beregnet til Newtons metode. Sammenlig sekantmetoden med Newtons metode.
 
-Forskellen mellem Sekantmetoden og Newtons metode er at fiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiisk 
+Forskellen mellem Sekantmetoden og Newtons metode er at Newtons metode bruger den afledede i et punkt, hvorimod Sekantmetoden bruger sekanten mellem to punkter. 
+%
+\subsubsection*{Python script - Sekantmetoden}
+%
+\input{incl/main/14bp}
