Update 11p.tex, 11.tex, and 2 more files...

--- a/CSB/incl/main/11.tex
+++ b/CSB/incl/main/11.tex
@@ -2,6 +2,7 @@
 Kode implementeringen finde i section (indsættes senere)
 % 
 Ændringer i $h_0$ viser sig kun at ændre på højden af kædelinjen, men påvirker ikke selve kædens form.
+\\\\
 %
 \begin{figure}[h!]
 \includegraphics[scale=0.5]{code/fig1}
@@ -15,7 +16,4 @@ Kode implementeringen finde i section (indsættes senere)
 \caption{Det ses at en ændring fra $\Lambda=2$ til $\lambda=1$ ændrer kædelinjen meget.}
 \end{figure}
 %
-\subsubsection*{Python script - Graf af funktionen}
-%
-\input{incl/main/11p}
-%
+Python spriptet for funktionerne, ses i appendix \ref{app:1.1}.
