--- a/CSB/master.tex
+++ b/CSB/master.tex
@@ -57,9 +57,9 @@
 
 % Appendicer indsættes inde i en appendices-blok og bliver nummereret med
 % bogstaver i stedet for tal
-%\begin{appendices}
-%
-%\end{appendices}
+\begin{appendices}
+	\include{incl/app/11p}
+\end{appendices}
 
 % Dokumentets 'back matter' er til ekstra ting som f.eks. litteraturlisten.
 % Overskrifter bliver ikke nummereret her.
