--- a/CSB/incl/main/11.tex
+++ b/CSB/incl/main/11.tex
@@ -1,8 +1,7 @@
 \section*{1.}
-Kode implementeringen finde i section (indsættes senere)
+Kode implementeringen finde i appendix \ref{app:1.1}.
 % 
-Ændringer i $h_0$ viser sig kun at ændre på højden af kædelinjen, men påvirker ikke selve kædens form.
-\\\\
+Ændringer i $h_0$ viser sig kun at ændre på højden af kædelinjen, men påvirker ikke selve kædens form. 
 %
 \begin{figure}[h!]
 \includegraphics[scale=0.5]{code/fig1}
@@ -16,4 +15,3 @@ Kode implementeringen finde i section (indsættes senere)
 \caption{Det ses at en ændring fra $\Lambda=2$ til $\lambda=1$ ændrer kædelinjen meget.}
 \end{figure}
 %
-Python spriptet for funktionerne, ses i appendix \ref{app:1.1}.
