Update 11.tex, pkgs.tex, and master.tex

--- a/CSB/incl/main/11.tex
+++ b/CSB/incl/main/11.tex
@@ -12,6 +12,6 @@ Kode implementeringen finde i appendix \ref{app:1.1}.
 \begin{figure}[h!]
 \includegraphics[scale=0.5]{code/fig3}
 \includegraphics[scale=0.5]{code/fig4}
-\caption{Det ses at en ændring fra $\Lambda=2$ til $\lambda=1$ ændrer kædelinjen meget.}
+\caption{Det ses at en ændring fra $\lambda=2$ til $\lambda=1$ ændrer kædelinjen, både i forhold til højden af pælene og kædens hældning.}
 \end{figure}
 %
