Update sekant.py, sekant_noter.py, and 14d.tex

--- a/CSB/incl/main/14d.tex
+++ b/CSB/incl/main/14d.tex
@@ -1,2 +1,4 @@
-\subsection*{(d) }
+\subsection*{(d) Sammenligning}
 % 
+%Sammenlig de forskellige metoder til bestemmelse af \lambda ud fra ligning (6). 
+% Sammenligningen skal omfatte både de konkrete tal og konvergenshastighed af metoderne.
