Update 1_4_c_1_8.py, func-iter.py, and 14c.tex

--- a/CSB/incl/main/14c.tex
+++ b/CSB/incl/main/14c.tex
@@ -1,2 +1,12 @@
 \subsection*{(c) Fixpunktligningen}
-% Ligningen (6) kan omskrives til en xpunktligning. Gr rede for de to omskrivninger her
+ Ligningen (6) kan omskrives til en fixpunktligning. Gør rede for de to omskrivninger her.\\
+Omskrivningerne kan fåes alt efter hvilket $\lambda$ der isolerers for
+\begin{align*}
+\lambda \cdot cosh(\dfrac{75}{\lambda})&=\lambda+15\\
+\lambda&=\dfrac{\lambda+15}{cosh(\dfrac{75}{\lambda})}
+\end{align*}
+og
+\begin{align*}
+\lambda \cdot cosh(\dfrac{75}{\lambda})&=\lambda+15\\
+\lambda \cdot cosh(\dfrac{75}{\lambda})-15 &=\lambda
+\end{align*}
