Update bisect.py, newton-iter.py, and 14a.tex

--- a/CSB/incl/main/14a.tex
+++ b/CSB/incl/main/14a.tex
@@ -1,2 +1,12 @@
-\subsection*{(a) }
-
+\subsection*{(a)}
+%
+Både Newtons metode og bisektionsmetoden er metoder til numerisk bestemmelse af nulpunkter.
+Derfor omskrives ligning (bingbong) til
+%
+\begin{align*}
+\cosh( \frac{L}{2\lambda}) - \lambda - s &= 0,
+\end{align*}
+%
+hvorefter metoderne kan bruges til at bestemme et nulpunkt.
+Bisektionsmetoden når en tolerance på $1\cdot 10^{-12}$ efter $47$ iterationer.
+Med samme tolerance afsluttes Newtons metode efter kun $7$ iterationer.
