Update 1_4_c_1_8 _noter.py, 1_4_c_1_8.py, and 3 more files...

--- a/CSB/incl/main/14c.tex
+++ b/CSB/incl/main/14c.tex
@@ -10,3 +10,9 @@ og
 \lambda \cdot cosh(\dfrac{75}{\lambda})&=\lambda+15\\
 \lambda \cdot cosh(\dfrac{75}{\lambda})-15 &=\lambda
 \end{align*}
+gsdfgs
+\lstset{style=mystyle}
+\lstinputlisting[language=Python]{code/1_4_c_1_8.py}
+geg
+\lstset{style=mystyle}
+\lstinputlisting[language=Python]{code/func-iter.py}
