--- a/CSB/incl/main/14c.tex
+++ b/CSB/incl/main/14c.tex
@@ -1,5 +1,5 @@
 \subsection*{(c) Fixpunktligningen}
- Ligningen (6) kan omskrives til en fixpunktligning. Gør rede for de to omskrivninger her.\\
+ Ligningen (6) kan omskrives til en fixpunktligning. Gør rede for de to omskrivninger her.\\
 Omskrivningerne kan fåes alt efter hvilket $\lambda$ der isolerers for
 \begin{align*}
 \lambda \cdot cosh(\dfrac{75}{\lambda})&=\lambda+15\\
@@ -10,7 +10,7 @@ og
 \lambda \cdot cosh(\dfrac{75}{\lambda})&=\lambda+15\\
 \lambda \cdot cosh(\dfrac{75}{\lambda})-15 &=\lambda
 \end{align*}
-gsdfgs
+I de 2 programmer kan man finde ud af at den først omskrivning ikke vil fungere til at finde en løsning, mens den anden nærmer sig en løsning der er ca 189. Det ene program plotter visuelt hvad der sker mens den anden viser hver iteration.
 \lstset{style=mystyle}
 \lstinputlisting[language=Python]{code/1_4_c_1_8.py}
 geg
